--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,9 @@
 {
-    "name":              "ocramius/proxy-manager",
+    "name":              "suimarco/proxy-manager",
     "description":       "A library providing utilities to generate, instantiate and generally operate with Object Proxies",
     "type":              "library",
     "license":           "MIT",
-    "homepage":          "https://github.com/Ocramius/ProxyManager",
+    "homepage":          "https://github.com/suimarco/proxy-manager/",
     "keywords":          [
         "proxy",
         "proxy pattern",
@@ -16,8 +16,15 @@
             "name":     "Marco Pivetta",
             "email":    "ocramius@gmail.com",
             "homepage": "http://ocramius.github.io/"
+        },
+        {
+            "name": "Nicolas Grekas",
+            "email": "p@tchwork.com"
         }
     ],
+    "replace": {
+        "ocramius/proxy-manager": "^2.1"
+    },
     "require": {
         "php":                       ">=7.1",
         "laminas/laminas-code":      "^3.4.1",
@@ -31,12 +38,6 @@
         "ext-phar":                     "*",
         "symfony/phpunit-bridge":       "^5.2"
     },
-    "suggest": {
-        "ocramius/generated-hydrator": "To have very fast object to array to object conversion for ghost objects",
-        "laminas/laminas-xmlrpc":      "To have the XmlRpc adapter (Remote Object feature)",
-        "laminas/laminas-json":        "To have the JsonRpc adapter (Remote Object feature)",
-        "laminas/laminas-soap":        "To have the Soap adapter (Remote Object feature)"
-    },
     "autoload": {
         "psr-4": {
             "ProxyManager\\": "src/ProxyManager"
@@ -44,16 +45,10 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "ProxyManagerBench\\": "tests/ProxyManagerBench",
             "ProxyManagerTest\\": "tests/ProxyManagerTest",
             "ProxyManagerTestAsset\\": "tests/ProxyManagerTestAsset",
             "Laminas\\Server\\": "tests/Stubbed/Laminas/Server"
         }
     },
-    "minimum-stability": "dev",
-    "extra": {
-        "branch-alias": {
-            "dev-master": "3.0.x-dev"
-        }
-    }
+    "minimum-stability": "dev"
 }
