--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
         "ocramius/proxy-manager": "^2.1"
     },
     "require": {
-        "php":                       ">=7.1",
+        "php":                       "^7.1 || ^8.0",
         "laminas/laminas-code":      "^3.4.1",
         "symfony/filesystem":        "^4.4|^5.0"
     },
